--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>Electron</title>
+    <title>Background Eraser</title>
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://huggingface.co https://hf-mirror.com https://cdn-lfs.huggingface.co https://cdn-lfs.hf-mirror.com; object-src 'none'; base-uri 'self';"
     />
   </head>
 
