--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; connect-src 'self' https://huggingface.co https://hf-mirror.com https://cdn-lfs.huggingface.co https://cdn-lfs.hf-mirror.com https://cdn.jsdelivr.net; object-src 'none'; base-uri 'self'; worker-src 'self' blob:;"
+      content="default-src 'self'; script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; style-src 'self' 'unsafe-inline'; img-src 'self' data: https: blob:; connect-src 'self' https://huggingface.co https://hf-mirror.com https://cdn-lfs.huggingface.co https://cdn-lfs.hf-mirror.com https://cdn.jsdelivr.net data:; object-src 'none'; base-uri 'self'; worker-src 'self' blob:;"
     />
   </head>
 
